syntax = "proto3";

option csharp_namespace = "GrpcService.Protos";

message Rating {
	int32 Id = 1;
	int32 CourseId = 2;
	string StudentName = 3;
	int32 StarValue = 4;
	string Review = 5;
}